--- a/AM_Tools/lib/plot-s23eav-abs.ini
+++ b/AM_Tools/lib/plot-s23eav-abs.ini
@@ -3,11 +3,11 @@
 2 -10 10 0.592 0 11 =$2 
 3 0 0 1 0 0 =$3 
 4 0 0 1 0 0 =$4 
-5 0 0 1 0 0 =$5 
+5 0 0 1 0 0 =abs($5) 
 6 0 0 1 0 0 =$6 
 7 0 0 1 0 0 =$7 
 8 0 0 1 0 0 =$8 
-9 0 0 1 0 3 =$9 
+9 0 0 1 0 0 =$9 
 10 0 0 1 0 11 =$10 
 11 0 0 1 0 11 =$11 
 12 0 0 1 0 0 =$12 
@@ -19,7 +19,7 @@
 19 0 0 1 0 0 =$19 
 20 0 0 1 0 0 =$20 
 21 0 0 1 0 0 =$21 
-22 0 0 1 0 3 =$22 
+22 0 0 1 0 0 =$22 
 23 0 0 1 0 0 =$23 
 24 0 0 1 0 0 =$24 
 25 0 0 1 0 0 =$25 
@@ -65,14 +65,14 @@
 62 0 0 1 0 11 =$62 
 63 0 0 1 0 11 =$63 
 64 0 0 1 0 11 =$64 
-65 0 0 1 0 33 =$65 
-66 0 0 1 0 33 =$66 
-87 0 0 1 0 33 =$87 
-88 0 0 1 0 33 =$88 
-89 0 0 1 0 33 =$89 
-90 0 0 1 0 33 =$90 
-91 0 0 1 0 33 =$91 
-92 0 0 1 0 33 =$92 
+65 0 0 1 0 11 =$65 
+66 0 0 1 0 11 =$66 
+87 0 0 1 0 11 =$87 
+88 0 0 1 0 11 =$88 
+89 0 0 1 0 11 =$89 
+90 0 0 1 0 11 =$90 
+91 0 0 1 0 11 =$91 
+92 0 0 1 0 11 =$92 
 126 0 0 1 0 11 =$126 
 127 0 0 1 0 11 =$127 
 128 0 0 1 0 11 =$128 
