Updates to sim version - added ability to customize the ylabels on the overplot and fixed a couple small issues.

--- a/AM_Tools/lib/plot-amssgn-rud.ini
+++ b/AM_Tools/lib/plot-amssgn-rud.ini
@@ -1,5 +1,5 @@
-0 0 0 1 0 0 =$0 
-22 0 0 1 0 0 =$22 
-8 0 0 1 0 0 =$8 
-13 0 0 1 0 0 =$13 
-14 0 0 1 0 0 =$14 
+0 0 0 1 0 0 =$0 u_(ft/s) 
+22 300 100 1 0 0 =$22 Depth_(ft) 
+8 0 0 1 0 0 =$8 Dummy_(kt) 
+13 0 0 1 0 0 =$13  
+14 0 0 1 0 0 =$14  
