Add computed channels for individual deck gauges
Modified the merge to recognize computed channels for the forward and aft deck Kistler gauges.  The channels for the aft gauge are 940-945 and for the forward gauge are 950-955.  These channels DO NOT have the deck self weight subtracted from them.

--- a/AM_Tools/lib/plot-amssgn-ho.ini
+++ b/AM_Tools/lib/plot-amssgn-ho.ini
@@ -1,5 +1,5 @@
-0 0 0 1 0 0 =$0 
-15 0 0 1 0 0 =$15 
-5 0 0 1 0 0 =$5 
-9 0 0 1 0 3 =$9 
-22 270 180 1 0 0 =$22 
+0 0 0 1 0 0 =$0 Velocity_[ft/s] 
+15 0 0 1 0 0 =$15 Rudder_[deg] 
+5 0 0 1 0 0 =$5 r_[deg/s] 
+9 0 0 1 0 3 =$9 Yaw_[deg] 
+22 270 180 1 0 0 =$22 ZCG_[ft] 
