--- a/AM_Tools/lib/plot-amssgn-kurt.ini
+++ b/AM_Tools/lib/plot-amssgn-kurt.ini
@@ -72,6 +72,6 @@
 107 0 0 1 0 33 =$107  
 108 0 0 1 0 33 =$108  
 109 0 0 1 0 33 =$109  
-110 0 0 1 0 33 =$110 
-56,58 0 0 1 0 33 =$56+$58 
-53,60 0 0 1 0 33 =$53+$60  
+110 0 0 1 0 33 =$110  
+55,57 0 0 1 0 0 =$55+$57 STBD_STAB_+_FLAP_NF_[lbs] 
+52,59 0 0 1 0 0 =$52+$59 PORT_STAB_+_FLAP_NF_[lbs] 
