--- a/AM_Tools/lib/plot-amssgn-rise.ini
+++ b/AM_Tools/lib/plot-amssgn-rise.ini
@@ -1,5 +1,5 @@
-0 0 0 1 0 0 =$0 
-22 450 150 1 0 0 =$22 
-8 0 0 1 0 0 =$8 
-4 0 0 1 0 0 =$4 
-23 -140 140 1 0 0 =$23 
+0 0 0 1 0 0 =$0 Velocity_[ft/s] 
+22 350 150 1 0 0 =$22 ZCG_[ft] 
+8 0 0 1 0 0 =$8 Pitch_[deg] 
+4 0 0 1 0 0 =$4 q_[deg/s] 
+23 -140 140 1 0 0 =$23 Shaft_Rate_[rpm] 
