--- a/AM_Tools/lib/plot-amssgn-ut.ini
+++ b/AM_Tools/lib/plot-amssgn-ut.ini
@@ -1,5 +1,5 @@
-15 0 0 1 0 0 =$15 
-5 0 0 1 0 0 =$5 
-8 0 0 1 0 0 =$8 
-4 0 0 1 0 0 =$4 
-22 300 50 1 0 0 =$22 
+15 0 0 1 0 0 =$15 Rudder_[deg] 
+5 0 0 1 0 0 =$5 r_[deg/s] 
+8 0 0 1 0 0 =$8 Pitch_[deg] 
+4 0 0 1 0 0 =$4 q_[deg/s] 
+22 300 50 1 0 0 =$22 ZCG_[ft] 
