--- a/AM_Tools/lib/plot-amssgn-vo.ini
+++ b/AM_Tools/lib/plot-amssgn-vo.ini
@@ -1,5 +1,5 @@
-0 0 0 1 0 0 =$0 
-13 0 0 1 0 0 =$13 
-4 0 0 1 0 0 =$4 
-8 0 0 1 0 0 =$8 
-22 320 180 1 0 0 =$22 
+0 0 0 1 0 0 =$0 Velocity_[ft/s] 
+13 0 0 1 0 0 =$13 Stern_Plane_Angle_[deg] 
+4 0 0 1 0 0 =$4 q_[deg/s] 
+8 0 0 1 0 0 =$8 Pitch_[deg] 
+22 320 180 1 0 0 =$22 ZCG_[ft] 
