--- a/AM_Tools/lib/plot-deck.ini
+++ b/AM_Tools/lib/plot-deck.ini
@@ -1,3 +1,6 @@
-114 0 0 1 0 11 =$114 
-115 0 0 1 0 11 =$115 
-116 0 0 1 0 11 =$116 
+114 0 0 1 0 11 =$114 Deck_FX_(lb) 
+115 0 0 1 0 11 =$115 Deck_FY_(lb) 
+116 0 0 1 0 0 =$116 Deck_FZ_(lb) 
+117 0 0 1 0 0 =$117  
+118 0 0 1 0 0 =$118  
+119 0 0 1 0 11 =$119  
