Updates to plot configuration files

--- a/AM_Tools/lib/plot-amobc-pressures.ini
+++ b/AM_Tools/lib/plot-amobc-pressures.ini
@@ -1,24 +1,12 @@
-51 0 0 1 0 0 =$51 P1_HI 
-59 0 0 1 0 0 =$59 P13_Low 
-67 0 0 1 0 0 =$67 P2_HI 
-83 0 0 1 0 0 =$83 P14_Low 
-91 0 0 1 0 0 =$91 P3_HI 
-99 0 0 1 0 0 =$99 P15_Low 
-115 0 0 1 0 0 =$115 P4_HI 
-123 0 0 1 0 0 =$123 P16_Low 
-131 0 0 1 0 0 =$131 P5_HI 
-147 0 0 1 0 0 =$147 P17_Low 
-155 0 0 1 0 0 =$155 P6_HI 
-163 0 0 1 0 0 =$163 P18_Low 
-52 0 0 1 0 0 =$52 P7_HI 
-60 0 0 1 0 0 =$60 P19_Low 
-68 0 0 1 0 0 =$68 P8_HI 
-84 0 0 1 0 0 =$84 P20_Low 
-92 0 0 1 0 0 =$92 P9_HI 
-100 0 0 1 0 0 =$100 P21_Low 
-116 0 0 1 0 0 =$116 P10_HI 
-124 0 0 1 0 0 =$124 P22_Low 
-132 0 0 1 0 0 =$132 P11_HI 
-148 0 0 1 0 0 =$148 P23_Low 
-156 0 0 1 0 0 =$156 P12_HI 
-164 0 0 1 0 0 =$164 P24_Low 
+83 0 0 1 0 0 =$83 Loc_1 
+156 0 0 1 0 0 =$156 Loc_7 
+68 0 0 1 0 0 =$68 Loc_2 
+67 0 0 1 0 0 =$67 Loc_8 
+100 0 0 1 0 0 =$100 Loc_3 
+143 0 0 .01 0 0 =$143 Loc_9 
+60 0 0 1 0 0 =$60 Loc_4 
+164 0 0 1 0 0 =$164 Loc_10 
+91 0 0 1 0 0 =$91 Loc_5 
+51 0 0 1 0 0 =$51 Loc_11 
+116 0 0 1 0 0 =$116 Loc_6 
+59 0 0 1 0 0 =$59 Loc_12 
