--- a/plotfiles/plot-amVirginia.ini
+++ b/plotfiles/plot-amVirginia.ini
@@ -13,7 +13,8 @@
 13 0 0 1 0 0 =$13  
 16 0 0 1 0 0 =$16  
 14 0 0 1 0 0 =$14  
-15 0 0 1 0 0 =$15  
+15 0 0 1 0 0 =$15 
+15,26 0 0 1 0 0 =diff($15,$26)  
 17 0 0 1 0 0 =$17  
 18 0 0 1 0 0 =$18  
 19 0 0 1 0 0 =$19  
